tests/fixtures/invalid/int_slice.py
# Test slice on int (unsupported)
x: int = 42
print(x[0:1])
